# emu8051

./: .gitignore  CMakeLists.txt  core.c  emu.c  emulator.h  mainview.c  opcodes.c  options.c
